--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
     "skipLibCheck": true,
     "types": ["jest"],
     "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true
   },
   "include": ["src/**/*.ts", "tests/**/*.ts"],
   "exclude": ["node_modules", "dist"]
